--- a/index.html
+++ b/index.html
@@ -170,18 +170,56 @@
     <!-- About Section -->
 
     <!-- Skill Section -->
-    <section id="about" class="pt-36 pb-32">
+    <section id="skill" class="pt-36 pb-32">
         <div class="container">
             <div class="flex flex-wrap">
-                <div class="w-full px-4">
-                    <div class="max-w-xl mx-auto text-center mb-16">
-                        <h4 class="font-semibold text-lg text-primary mb-2">My Skills</h4>
-                        <h2 class="font-bold text-dark text-3xl mb-4">Project Terbaru</h2>
-                        <p class="font-medium text-md text-secondary">Lorem ipsum dolor sit amet
-                            consectetur
-                            adipisicing
-                            elit. Voluptatem voluptas repellat unde
-                            dolorum adipisci. Impedit magni commodi consequatur quaerat enim.</p>
+                <div class="w-full px-4 mb-10 lg:w-1/2">
+                    <h2 class="font-bold text-primary text-3xl mb-5 max-w-md lg:text-4xl">My Skills</h2>
+                    <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">I am skilled in creating
+                        stunning web applications using HTML, CSS, Javascript, Tailwind, and Bootstrap. Additionally, I
+                        am currently deepening my expertise in back-end development with Node JS, PHP, Google Cloud, and
+                        Firebase, as well as designing captivating user interfaces with Figma.</p>
+                </div>
+                <div class="w-full px-4 mb-10 lg:w-1/2">
+                    <div class="flex justify-between">
+                        <!-- HTML -->
+                        <div class="bg-white rounded-lg shadow-lg p-4" style="margin: 10px">
+                            <img style="height: auto" src="dist/img/skills/html.png" alt="" srcset="">
+                        </div>
+
+                        <!-- CSS -->
+                        <div class="bg-white rounded-lg shadow-lg p-4 m-4" style="margin: 10px"><img
+                                style="height: auto" src="dist/img/skills/css.png" alt="" srcset=""></div>
+
+                        <!-- JS -->
+                        <div class="bg-white rounded-lg shadow-lg p-4" style="margin: 10px"><img style="height: auto"
+                                src="dist/img/skills/javascript.png" alt="" srcset=""></div>
+
+                        <!-- Tailwind -->
+                        <div class="bg-white rounded-lg shadow-lg p-4" style="margin: 10px"><img style="height: auto"
+                                src="dist/img/skills/tailwind-css-icon.png" alt="" srcset=""></div>
+
+                        <!-- Bootstrap -->
+                        <div class="bg-white rounded-lg shadow-lg p-4" style="margin: 10px"><img style="height: auto"
+                                src="dist/img/skills/bootstrap.png" alt="" srcset=""></div>
+
+                    </div>
+                    <div class="flex my-4">
+                        <!-- NodeJS -->
+                        <div class="bg-white rounded-lg shadow-lg p-4" style="margin: 10px"><img style="height: auto"
+                                src="dist/img/skills/node-js.png" alt="" srcset=""></div>
+                        <!-- PHP -->
+                        <div class="bg-white rounded-lg shadow-lg p-4" style="margin: 10px"><img style="height: auto"
+                                src="dist/img/skills/php.png" alt="" srcset=""></div>
+                        <!-- Google Cloud -->
+                        <div class="bg-white rounded-lg shadow-lg p-4" style="margin: 10px"><img style="height: auto"
+                                src="dist/img/skills/google-cloud.png" alt="" srcset=""></div>
+                        <!-- Firebase -->
+                        <div class="bg-white rounded-lg shadow-lg p-4" style="margin: 10px"><img style="height: auto"
+                                src="dist/img/skills/firebase.png" alt="" srcset=""></div>
+                        <!-- Figma -->
+                        <div class="bg-white rounded-lg shadow-lg p-4" style="margin: 10px"><img style="height: auto"
+                                src="dist/img/skills/figma.png" alt="" srcset=""></div>
                     </div>
                 </div>
             </div>
