--- a/index.html
+++ b/index.html
@@ -170,14 +170,15 @@
     <!-- About Section -->
 
     <!-- Skill Section -->
-    <section id="skill" class="pt-36 pb-32">
+    <section id="skill" class="pt-26 pb-32">
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h2 class="font-bold text-primary text-3xl mb-5 max-w-md lg:text-4xl">My Skills</h2>
                     <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">I am skilled in creating
                         stunning web applications using HTML, CSS, Javascript, Tailwind, and Bootstrap. Additionally, I
-                        am currently deepening my expertise in back-end development with Node JS, PHP, Google Cloud, and
+                        am currently deepening my expertise in back-end and API development with Node JS, PHP, Google
+                        Cloud, and
                         Firebase, as well as designing captivating user interfaces with Figma.</p>
                 </div>
                 <div class="w-full px-4 mb-10 lg:w-1/2">
@@ -227,6 +228,29 @@
     </section>
     <!-- Skill Section -->
 
+    <!-- Skill Section -->
+    <section id="skill" class="pt-26 pb-32">
+        <div class="container">
+            <div class="flex gap-10">
+                <div class="bg-white rounded-lg shadow-lg p-4 m-4" style="margin: 10px">
+                    <h3 class="font-bold text-dark">Back-End</h3>
+                    <p class="font-medium text-base text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit.</p>
+                </div>
+                <div class="bg-white rounded-lg shadow-lg p-4 m-4" style="margin: 10px">
+                    <h3 class="font-bold text-dark">Back-End</h3>
+                    <p class="font-medium text-base text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit.</p>
+                </div>
+                <div class="bg-white rounded-lg shadow-lg p-4 m-4" style="margin: 10px">
+                    <h3 class="font-bold text-dark">Back-End</h3>
+                    <p class="font-medium text-base text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Portofolio Section -->
     <section id="portofolio" class="pt-36 pb-16 bg-slate-100">
         <div class="container">
@@ -243,56 +267,186 @@
                 </div>
                 <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
                     <div class="mb-12 p-4 md:w-1/2">
-                        <div class="rounded-md shadow-md overflow-hidden">
-                            <a href="https://kencanashop.netlify.app/"> <img
-                                    src="https://storage.googleapis.com/zeen-portfolio-windsy/dist/img/Portfolio/Kencana Shop.webp"
-                                    alt="Kencana Shop Webiste" style="width: 600px; border-radius: 0.375rem;"></a>
+                        <div class="bg-white rounded-xl p-6">
+                            <div class="rounded-md shadow overflow-hidden">
+                                <a href="https://kencanashop.netlify.app/"> <img
+                                        src="dist/img/Portfolio/Kencana Shop.png" alt="Kencana Shop"
+                                        style="width: 600px; border-radius: 0.375rem;"></a>
+                            </div>
+                            <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
+                                    href="https://kencanashop.netlify.app/">Kencana Shop
+                                </a></h3>
+                            <p class="font-medium text-base text-secondary">Lorem ipsum dolor
+                                sit amet
+                                consectetur, adipisicing
+                                elit. Laboriosam excepturi doloribus veniam.
+                            </p>
+                            <div class="flex mt-5">
+                                <div class="bg-slate-100 rounded p-2 mr-3">
+                                    <h3 class="font-medium text-dark">Bootstrap 5</h3>
+                                </div>
+                                <div class="bg-slate-100 rounded p-2 mr-3">
+                                    <h3 class="font-medium text-dark">HTML</h3>
+                                </div>
+                                <div class="bg-slate-100 rounded p-2 mr-3">
+                                    <h3 class="font-medium text-dark">CSS</h3>
+                                </div>
+                            </div>
                         </div>
-                        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Kencana Shop Website</h3>
-                        <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet
-                            consectetur, adipisicing
-                            elit. Laboriosam excepturi doloribus veniam.
-                        </p>
                     </div>
                     <div class="mb-12 p-4 md:w-1/2">
-                        <div class="rounded-md shadow-md overflow-hidden">
-                            <a href="https://kencanashop.netlify.app/"> <img
-                                    src="https://storage.googleapis.com/zeen-portfolio-windsy/dist/img/Portfolio/Kencana Shop.webp"
-                                    alt="Kencana Shop Webiste" style="width: 600px; border-radius: 0.375rem;"></a>
+                        <div class="bg-white rounded-xl p-6">
+                            <div class="rounded-md shadow overflow-hidden">
+                                <a href="https://github.com/RazinSyakib43/Cukurin-Aja.git"> <img
+                                        src="dist/img/Portfolio/Cukurin Aja.png" alt="CukurinAja"
+                                        style="width: 600px; border-radius: 0.375rem;"></a>
+                            </div>
+                            <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
+                                    href="https://github.com/RazinSyakib43/Cukurin-Aja.git">CukurinAja
+                                </a></h3>
+                            <p class="font-medium text-base text-secondary">Lorem ipsum dolor
+                                sit amet
+                                consectetur, adipisicing
+                                elit. Laboriosam excepturi doloribus veniam.
+                            </p>
+                            <div class="flex mt-5">
+                                <div class="bg-slate-100 rounded p-2 mr-3">
+                                    <h3 class="font-medium text-dark">HTML</h3>
+                                </div>
+                                <div class="bg-slate-100 rounded p-2 mr-3">
+                                    <h3 class="font-medium text-dark">CSS</h3>
+                                </div>
+                                <div class="bg-slate-100 rounded p-2 mr-3">
+                                    <h3 class="font-medium text-dark">Javascript</h3>
+                                </div>
+                            </div>
                         </div>
-                        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Kencana Shop Website</h3>
-                        <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet
-                            consectetur, adipisicing
-                            elit. Laboriosam excepturi doloribus veniam.
-                        </p>
                     </div>
                     <div class="mb-12 p-4 md:w-1/2">
-                        <div class="rounded-md shadow-md overflow-hidden">
-                            <img src="https://storage.googleapis.com/zeen-portfolio-windsy/dist/img/Portfolio/Kencana Shop.png"
-                                alt="Kencana Shop Webiste" width="100%" style="width: 600px; border-radius: 0.375rem;">
+                        <div class="bg-white rounded-xl p-6">
+                            <div class="rounded-md shadow overflow-hidden">
+                                <a href="https://github.com/RazinSyakib43/New-ParentCare.git"> <img
+                                        src="dist/img/Portfolio/Parent Care.png" alt="Parent Care"
+                                        style="width: 600px; border-radius: 0.375rem;"></a>
+                            </div>
+                            <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
+                                    href="https://github.com/RazinSyakib43/New-ParentCare.git">Parent Care
+                                </a></h3>
+                            <p class="font-medium text-base text-secondary">Lorem ipsum dolor
+                                sit amet
+                                consectetur, adipisicing
+                                elit. Laboriosam excepturi doloribus veniam.
+                            </p>
+                            <div class="flex mt-5">
+                                <div class="bg-slate-100 rounded p-2 mr-3">
+                                    <h3 class="font-medium text-dark">PHP</h3>
+                                </div>
+                                <div class="bg-slate-100 rounded p-2 mr-3">
+                                    <h3 class="font-medium text-dark">Bootstrap 5</h3>
+                                </div>
+                                <div class="bg-slate-100 rounded p-2 mr-3">
+                                    <h3 class="font-medium text-dark">MySQL</h3>
+                                </div>
+                            </div>
                         </div>
-                        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Kencana Shop Website</h3>
-                        <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet
-                            consectetur, adipisicing
-                            elit. Laboriosam excepturi doloribus veniam.
-                        </p>
                     </div>
                     <div class="mb-12 p-4 md:w-1/2">
-                        <div class="rounded-md shadow-md overflow-hidden">
-                            <img src="https://storage.googleapis.com/zeen-portfolio-windsy/dist/img/Portfolio/Kencana Shop.png"
-                                alt="Kencana Shop Webiste" width="100%" style="width: 600px; border-radius: 0.375rem;">
+                        <div class="bg-white rounded-xl p-6">
+                            <div class="rounded-md shadow overflow-hidden">
+                                <a href="https://github.com/RazinSyakib43/CariKuliner.git"> <img
+                                        src="dist/img/Portfolio/CariKuliner.png" alt="CariKuliner"
+                                        style="width: 600px; border-radius: 0.375rem;"></a>
+                            </div>
+                            <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
+                                    href="https://github.com/RazinSyakib43/CariKuliner.git">CariKuliner
+                                </a></h3>
+                            <p class="font-medium text-base text-secondary">Lorem ipsum dolor
+                                sit amet
+                                consectetur, adipisicing
+                                elit. Laboriosam excepturi doloribus veniam.
+                            </p>
+                            <div class="flex mt-5">
+                                <div class="bg-slate-100 rounded p-2 mr-3">
+                                    <h3 class="font-medium text-dark">HTML</h3>
+                                </div>
+                                <div class="bg-slate-100 rounded p-2 mr-3">
+                                    <h3 class="font-medium text-dark">JavaScript</h3>
+                                </div>
+                                <div class="bg-slate-100 rounded p-2 mr-3">
+                                    <h3 class="font-medium text-dark">Webpack</h3>
+                                </div>
+                                <div class="bg-slate-100 rounded p-2 mr-3">
+                                    <h3 class="font-medium text-dark">API</h3>
+                                </div>
+                            </div>
                         </div>
-                        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Kencana Shop Website</h3>
-                        <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet
-                            consectetur, adipisicing
-                            elit. Laboriosam excepturi doloribus veniam.
-                        </p>
+                    </div>
+                    <div class="mb-12 p-4 md:w-1/2">
+                        <div class="bg-white rounded-xl p-6">
+                            <div class="rounded-md shadow overflow-hidden">
+                                <a href="https://github.com/RazinSyakib43/Bookshelf-Apps"> <img
+                                        src="dist/img/Portfolio/Bookshelf Apps.png" alt="Bookshelf-Apps"
+                                        style="width: 600px; border-radius: 0.375rem;"></a>
+                            </div>
+                            <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
+                                    href="https://github.com/RazinSyakib43/Bookshelf-Apps">Bookshelf-Apps
+                                </a></h3>
+                            <p class="font-medium text-base text-secondary">Lorem ipsum dolor
+                                sit amet
+                                consectetur, adipisicing
+                                elit. Laboriosam excepturi doloribus veniam.
+                            </p>
+                            <div class="flex mt-5">
+                                <div class="bg-slate-100 rounded p-2 mr-3">
+                                    <h3 class="font-medium text-dark">HTML</h3>
+                                </div>
+                                <div class="bg-slate-100 rounded p-2 mr-3">
+                                    <h3 class="font-medium text-dark">CSS</h3>
+                                </div>
+                                <div class="bg-slate-100 rounded p-2 mr-3">
+                                    <h3 class="font-medium text-dark">JavaScript</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mb-12 p-4 md:w-1/2">
+                        <div class="bg-white rounded-xl p-6">
+                            <div class="rounded-md shadow overflow-hidden">
+                                <a
+                                    href="https://github.com/RazinSyakib43/Restaurant-Catalogue-with-PWA-Testing-and-Web-Optimized.git">
+                                    <img src="dist/img/Portfolio/HungerApps.png" alt="HungerApps"
+                                        style="width: 600px; border-radius: 0.375rem;"></a>
+                            </div>
+                            <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
+                                    href="https://github.com/RazinSyakib43/Restaurant-Catalogue-with-PWA-Testing-and-Web-Optimized.git">HungerApps
+                                </a></h3>
+                            <p class="font-medium text-base text-secondary">Lorem ipsum dolor
+                                sit amet
+                                consectetur, adipisicing
+                                elit. Laboriosam excepturi doloribus veniam.
+                            </p>
+                            <div class="flex mt-5">
+                                <div class="bg-slate-100 rounded p-2 mr-3">
+                                    <h3 class="font-medium text-dark">HTML</h3>
+                                </div>
+                                <div class="bg-slate-100 rounded p-2 mr-3">
+                                    <h3 class="font-medium text-dark">JavaScript</h3>
+                                </div>
+                                <div class="bg-slate-100 rounded p-2 mr-3">
+                                    <h3 class="font-medium text-dark">Webpack</h3>
+                                </div>
+                                <div class="bg-slate-100 rounded p-2 mr-3">
+                                    <h3 class="font-medium text-dark">API</h3>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- Portofolio Section -->
+
     <!-- Contact Section Start -->
     <section id="contact" class="pt-36 pb-32 dark:bg-slate-800">
         <div class="container">
@@ -334,6 +488,7 @@
         </div>
     </section>
     <!-- Contact Section End -->
+
     <!-- Footer Start -->
     <footer class="bg-dark pt-24 pb-12">
         <div class="container">
