finishing about me section

--- a/index.html
+++ b/index.html
@@ -25,16 +25,15 @@
                     </button>
 
                     <nav id="nav-menu"
-                        class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none">
+                        class="hidden absolute py-5 bg-slate-700 shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none">
                         <ul class="block lg:flex">
                             <li class="group">
                                 <a href="#home"
-                                    class="text-base text-white py-2 mx-8 flex group-hover:text-primary">Beranda</a>
+                                    class="text-base text-white py-2 mx-8 flex group-hover:text-primary">Home</a>
                             </li>
                             <li class="group">
                                 <a href="#about"
-                                    class="text-base text-white py-2 mx-8 flex group-hover:text-primary">Tentang
-                                    Saya</a>
+                                    class="text-base text-white py-2 mx-8 flex group-hover:text-primary">About Me</a>
                             </li>
                             <li class="group">
                                 <a href="#portofolio"
@@ -102,24 +101,17 @@
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-10 lg:w-1/2">
-                    <h4 class="font-bold uppercase text-primary text-lg mb-3">Tentang Saya</h4>
-                    <h2 class="font-bold text-secondary text-3xl mb-5 max-w-md lg:text-4xl">Lorem ipsum dolor sit amet
-                        consectetur
-                        adipisicing
-                        elit. Quidem, temporibus?</h2>
-                    <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Lorem ipsum dolor sit amet
-                        consectetur
-                        adipisicing
-                        elit. Reiciendis dolores suscipit corrupti
-                        provident deserunt asperiores aspernatur molestias quasi facere recusandae.</p>
-                </div>
-                <div class="w-full px-4 lg:w-1/2">
-                    <h3 class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-10">Mari Berteman</h3>
-                    <p class="font-medium text-base text-secondary mb-6 lg:text-lg">Lorem ipsum, dolor sit amet
-                        consectetur
-                        adipisicing elit. Fugit sapiente hic vel, ut
-                        reprehenderit quis qui suscipit deleniti? Labore, ut?</p>
-                    <div class="flex items-center">
+                    <h2 class="font-bold text-primary text-3xl mb-5 max-w-md lg:text-4xl">About Me</h2>
+                    <p class="font-medium text-base text-secondary text-justify max-w-xl lg:text-lg">Hi, my name is Zeen
+                        Keeb and I
+                        am currently a 6th-semester student at STMIK Sinar Nusantara. I am also a participant of the
+                        Bangkit Academy program, organized by Google, Goto, and Traveloka, with a focus on Cloud
+                        Computing. Prior to this, I also participated in other training programs such as Digitalent
+                        Kominfo and Dicoding Indonesia. My main focus is in Website Development and I am currently
+                        deepening my knowledge in Cloud Computing. During my free time, I love to read and explore new
+                        technologies, try out new things in tech to build fun side projects, watch animes or movies, and
+                        listen to music.</p>
+                    <div class="flex items-center mt-4">
                         <!-- Twitter -->
                         <a href="https://twitter.com/iamzeen43" target="_blank"
                             class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white">
@@ -161,6 +153,50 @@
                             </svg>
                         </a>
                     </div>
+                </div>
+                <div class="w-full px-4 lg:w-1/2">
+                    <h3 class="font-semibold text-white text-2xl mb-4 lg:text-3xl lg:pt-10">Experience</h3>
+                    <div class="experience mb-2">
+                        <div class="flex">
+                            <h4 class="font-semibold text-lg text-primary mr-2">2023</h4>
+                            <p class="font-bold text-white text-secondary text-justify max-w-xl lg:text-lg">
+                                Cloud Computing Cohort</p>
+                        </div>
+                        <p class="font-medium text-base text-secondary text-justify max-w-xl lg:text-md">
+                            Bangkit Academy led by Google, Tokopedia, Gojek, & Traveloka · Part-time
+                        </p>
+                    </div>
+                    <div class="experience mb-2">
+                        <div class="flex">
+                            <h4 class="font-semibold text-lg text-primary mr-2">2022</h4>
+                            <p class="font-bold text-white text-secondary text-justify max-w-xl lg:text-lg">
+                                Member</p>
+                        </div>
+                        <p class="font-medium text-base text-secondary text-justify max-w-xl lg:text-md">
+                            Google Developer Students Club
+                        </p>
+                    </div>
+                    <div class="experience mb-2">
+                        <div class="flex">
+                            <h4 class="font-semibold text-lg text-primary mr-2">2022</h4>
+                            <p class="font-bold text-white text-secondary text-justify max-w-xl lg:text-lg">
+                                Front-End Web and Back-End Developer Graduate</p>
+                        </div>
+                        <p class="font-medium text-base text-secondary text-justify max-w-xl lg:text-md">
+                            Dicoding Indonesia
+                        </p>
+                    </div>
+                    <div class="experience mb-2">
+                        <div class="flex">
+                            <h4 class="font-semibold text-lg text-primary mr-2">2022</h4>
+                            <p class="font-bold text-white text-secondary text-justify max-w-xl lg:text-lg">
+                                VSGA - Junior Web Developer Graduate</p>
+                        </div>
+                        <p class="font-medium text-base text-secondary text-justify max-w-xl lg:text-md">
+                            Digital Talent Scholarship
+                        </p>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -227,7 +263,7 @@
     <!-- Skill Section -->
 
     <!-- Portofolio Section -->
-    <section id="portofolio" class="pt-36 pb-16 bg-slate-100">
+    <section id="portofolio" class="pt-36 pb-16 bg-slate-800">
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full px-4">
