--- a/index.html
+++ b/index.html
@@ -36,19 +36,15 @@
                                     class="text-base text-white py-2 mx-8 flex group-hover:text-primary">About Me</a>
                             </li>
                             <li class="group">
+                                <a href="#skill"
+                                    class="text-base text-white py-2 mx-8 flex group-hover:text-primary">Skill</a>
+                            </li>
+                            <li class="group">
                                 <a href="#portofolio"
                                     class="text-base text-white py-2 mx-8 flex group-hover:text-primary">Portofolio</a>
                             </li>
                             <li class="group">
-                                <a href="#clients"
-                                    class="text-base text-white py-2 mx-8 flex group-hover:text-primary">Clients</a>
-                            </li>
-                            <li class="group">
-                                <a href="#blog"
-                                    class="text-base text-white py-2 mx-8 flex group-hover:text-primary">Blog</a>
-                            </li>
-                            <li class="group">
-                                <a href="#contact"
+                                <a href="#footer"
                                     class="text-base text-white py-2 mx-8 flex group-hover:text-primary">Contact</a>
                             </li>
                         </ul>
@@ -102,8 +98,8 @@
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h2 class="font-bold text-primary text-3xl mb-5 max-w-md lg:text-4xl">About Me</h2>
-                    <p class="font-medium text-base text-secondary text-justify max-w-xl lg:text-lg">Hi, my name is Zeen
-                        Keeb and I
+                    <p class="font-medium text-white text-secondary text-justify max-w-xl lg:text-lg">Hi, my name is
+                        Muhammad Razin Syakib and I
                         am currently a 6th-semester student at STMIK Sinar Nusantara. I am also a participant of the
                         Bangkit Academy program, organized by Google, Goto, and Traveloka, with a focus on Cloud
                         Computing. Prior to this, I also participated in other training programs such as Digitalent
@@ -162,8 +158,8 @@
                             <p class="font-bold text-white text-secondary text-justify max-w-xl lg:text-lg">
                                 Cloud Computing Cohort</p>
                         </div>
-                        <p class="font-medium text-base text-secondary text-justify max-w-xl lg:text-md">
-                            Bangkit Academy led by Google, Tokopedia, Gojek, & Traveloka · Part-time
+                        <p class="font-medium text-slate-400 text-secondary text-justify max-w-xl lg:text-md">
+                            Bangkit Academy led by Google, Tokopedia, Gojek, & Traveloka
                         </p>
                     </div>
                     <div class="experience mb-2">
@@ -172,7 +168,7 @@
                             <p class="font-bold text-white text-secondary text-justify max-w-xl lg:text-lg">
                                 Member</p>
                         </div>
-                        <p class="font-medium text-base text-secondary text-justify max-w-xl lg:text-md">
+                        <p class="font-medium text-slate-400 text-secondary text-justify max-w-xl lg:text-md">
                             Google Developer Students Club
                         </p>
                     </div>
@@ -182,7 +178,7 @@
                             <p class="font-bold text-white text-secondary text-justify max-w-xl lg:text-lg">
                                 Front-End Web and Back-End Developer Graduate</p>
                         </div>
-                        <p class="font-medium text-base text-secondary text-justify max-w-xl lg:text-md">
+                        <p class="font-medium text-slate-400 text-secondary text-justify max-w-xl lg:text-md">
                             Dicoding Indonesia
                         </p>
                     </div>
@@ -192,7 +188,7 @@
                             <p class="font-bold text-white text-secondary text-justify max-w-xl lg:text-lg">
                                 VSGA - Junior Web Developer Graduate</p>
                         </div>
-                        <p class="font-medium text-base text-secondary text-justify max-w-xl lg:text-md">
+                        <p class="font-medium text-slate-400 text-secondary text-justify max-w-xl lg:text-md">
                             Digital Talent Scholarship
                         </p>
                     </div>
@@ -209,7 +205,7 @@
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h2 class="font-bold text-primary text-3xl mb-5 max-w-md lg:text-4xl">My Skills</h2>
-                    <p class="font-medium text-base text-secondary text-justify max-w-xl lg:text-lg">I am skilled in
+                    <p class="font-medium text-white text-secondary text-justify max-w-xl lg:text-lg">I am skilled in
                         creating
                         stunning web applications using HTML, CSS, Javascript, Tailwind, and Bootstrap. Additionally, I
                         am currently deepening my expertise in back-end and API development with Node JS, PHP, Google
@@ -267,22 +263,26 @@
     <!-- Portofolio Section -->
     <section id="portofolio" class="pt-36 pb-16 bg-slate-800">
         <div class="container">
-            <div class="flex flex-wrap">
-                <div class="w-full px-4">
-                    <div class="max-w-xl mx-auto text-center mb-16">
-                        <h2 class="font-bold text-primary text-3xl mb-5 max-w-md lg:text-4xl">Showcase Projects</h2>
-                    </div>
+            <div class="max-w-5xl mx-auto px-5 text-center mb-16">
+                <div class="w-full">
+                    <h2 class="font-bold text-primary text-3xl mb-5 lg:text-4xl">Portfolio</h2>
+                    <p class="font-medium text-white text-secondary text-justify lg:text-lg">Explore my best
+                        projects that showcase my skills and expertise in various technologies and programming
+                        languages. Check out my portfolio and see the projects that I'm proud of and that have made a
+                        significant impact in the tech community!</p>
                 </div>
+            </div>
+            <div class="flex flex-wrap">
                 <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
-                                <a href="https://kencanashop.netlify.app/"> <img
+                                <a href="https://kencanashop.netlify.app/" target="_blank"> <img
                                         src="dist/img/Portfolio/Kencana Shop.png" alt="Kencana Shop"
                                         style="width: 600px; border-radius: 0.375rem;"></a>
                             </div>
                             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
-                                    href="https://kencanashop.netlify.app/">Kencana Shop
+                                    href="https://kencanashop.netlify.app/" target="_blank">Kencana Shop
                                 </a></h3>
                             <p class="font-medium text-dark text-justify">Kencana Shop is an online store
                                 for Muslimah
@@ -306,12 +306,12 @@
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
-                                <a href="https://github.com/RazinSyakib43/Cukurin-Aja.git"> <img
+                                <a href="https://github.com/RazinSyakib43/Cukurin-Aja.git" target="_blank"> <img
                                         src="dist/img/Portfolio/Cukurin Aja.png" alt="CukurinAja"
                                         style="width: 600px; border-radius: 0.375rem;"></a>
                             </div>
                             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
-                                    href="https://github.com/RazinSyakib43/Cukurin-Aja.git">CukurinAja
+                                    href="https://github.com/RazinSyakib43/Cukurin-Aja.git" target="_blank">CukurinAja
                                 </a></h3>
                             <p class="font-medium text-base text-secondary text-justify">CukurinAja is a website that
                                 showcases the
@@ -336,12 +336,13 @@
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
-                                <a href="https://github.com/RazinSyakib43/New-ParentCare.git"> <img
+                                <a href="https://github.com/RazinSyakib43/New-ParentCare.git" target="_blank"> <img
                                         src="dist/img/Portfolio/Parent Care.png" alt="Parent Care"
                                         style="width: 600px; border-radius: 0.375rem;"></a>
                             </div>
                             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
-                                    href="https://github.com/RazinSyakib43/New-ParentCare.git">Parent Care
+                                    href="https://github.com/RazinSyakib43/New-ParentCare.git" target="_blank">Parent
+                                    Care
                                 </a></h3>
                             <p class="font-medium text-base text-secondary text-justify">Parent Care is an online
                                 platform that
@@ -367,12 +368,12 @@
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
-                                <a href="https://github.com/RazinSyakib43/CariKuliner.git"> <img
+                                <a href="https://github.com/RazinSyakib43/CariKuliner.git" target="_blank"> <img
                                         src="dist/img/Portfolio/CariKuliner.png" alt="CariKuliner"
                                         style="width: 600px; border-radius: 0.375rem;"></a>
                             </div>
                             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
-                                    href="https://github.com/RazinSyakib43/CariKuliner.git">CariKuliner
+                                    href="https://github.com/RazinSyakib43/CariKuliner.git" target="_blank">CariKuliner
                                 </a></h3>
                             <p class="font-medium text-base text-secondary text-justify">CariKuliner is a front-end web
                                 application
@@ -400,12 +401,13 @@
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
-                                <a href="https://github.com/RazinSyakib43/Bookshelf-Apps"> <img
+                                <a href="https://github.com/RazinSyakib43/Bookshelf-Apps" target="_blank"> <img
                                         src="dist/img/Portfolio/Bookshelf Apps.png" alt="Bookshelf-Apps"
                                         style="width: 600px; border-radius: 0.375rem;"></a>
                             </div>
                             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
-                                    href="https://github.com/RazinSyakib43/Bookshelf-Apps">Bookshelf-Apps
+                                    href="https://github.com/RazinSyakib43/Bookshelf-Apps"
+                                    target="_blank">Bookshelf-Apps
                                 </a></h3>
                             <p class="font-medium text-base text-secondary text-justify">Bookshelf Apps is a web
                                 application that allows users to add, move, and delete book data on their bookshelves.
@@ -432,11 +434,12 @@
                             <div class="rounded-md shadow overflow-hidden">
                                 <a
                                     href="https://github.com/RazinSyakib43/Restaurant-Catalogue-with-PWA-Testing-and-Web-Optimized.git">
-                                    <img src="dist/img/Portfolio/HungerApps.png" alt="HungerApps"
+                                    <img src="dist/img/Portfolio/HungerApps.png" target="_blank" alt="HungerApps"
                                         style="width: 600px; border-radius: 0.375rem;"></a>
                             </div>
                             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
-                                    href="https://github.com/RazinSyakib43/Restaurant-Catalogue-with-PWA-Testing-and-Web-Optimized.git">HungerApps
+                                    href="https://github.com/RazinSyakib43/Restaurant-Catalogue-with-PWA-Testing-and-Web-Optimized.git"
+                                    target="_blank">HungerApps
                                 </a></h3>
                             <p class="font-medium text-base text-secondary text-justify">HungerApps is a Progressive Web
                                 App built
@@ -474,14 +477,14 @@
     <!-- Portofolio Section -->
 
     <!-- Footer Start -->
-    <footer class="bg-dark pt-24 pb-12">
+    <footer class="bg-dark pt-24 pb-12" id="footer">
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="mb-12 w-full px-4 font-medium text-slate-300 md:w-1/2">
                     <h3 class="mb-2 text-3xl font-bold">Need help bringing your vision to life? Let's collaborate and
                         make it happen.</h3>
                     <p>
-                        "If you need help bringing your vision to life, collaborate with me. Together, we can create
+                        If you need help bringing your vision to life, collaborate with me. Together, we can create
                         something extraordinary. Contact me to bring your dreams to life.</p>
                     <div class="mb-5 flex mt-5">
                         <!-- Twitter -->
@@ -556,11 +559,8 @@
 
 
         <p class="text-center text-xs font-medium text-slate-500">
-            Copyright <span class="text-pink-500"></span> © 2022 <a href="https://instagram.com/sandhikagalih"
+            Copyright <span class="text-pink-500"></span> © 2022 <a href="https://instagram.com/razinsyakib_"
                 target="_blank" class="font-bold text-primary">Muhammad Razin Syakib</a> | All Rights Reserved.
-            <br>
-            Made by <a href="https://tailwindcss.com" target="_blank" class="font-bold text-sky-500">Tailwind
-                CSS</a>.
         </p>
         </div>
         </div>
