--- a/index.html
+++ b/index.html
@@ -549,7 +549,10 @@
                             </div>
                             <div class="w-full px-4">
                                 <button
-                                    class="w-1/3 rounded-md bg-primary py-3 px-8 text-base font-semibold text-white transition duration-500 hover:opacity-80 hover:shadow-lg">Kirim</button>
+                                    class="w-1/3 rounded-md bg-primary py-3 px-8 text-base font-semibold text-white transition duration-500 hover:opacity-80 hover:shadow-lg">
+                                    <a href="/"> Send
+                                        Message</a>
+                                </button>
                             </div>
                         </div>
                     </form>
