--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="w-full self-end px-4 lg:w-1/2 md:scale-125">
                     <div class="relative mt-10 lg:mt-9 lg:right-0">
                         <img style="width: 400px;"
-                            src="https://storage.googleapis.com/zeen-portfolio-windsy/dist/img/Razinv2.png"
+                            src="https://storage.googleapis.com/razinsyakib.appspot.com/img/Razinv2.png"
                             alt="Muhammad Razin Syakib" class="max-w-full mx-auto">
                         <span class="absolute bottom-20 -z-10 left-1/2 -translate-x-1/2">
                             <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
@@ -216,43 +216,62 @@
                     <div class="flex flex-wrap">
                         <!-- HTML -->
                         <div class="bg-white rounded-lg shadow-lg p-4 lg:w-1/7 md:w-1/6 xs:w-1/5" style="margin: 10px">
-                            <img style="height: auto" src="dist/img/skills/html.png" alt="" srcset="">
+                            <img style="height: auto"
+                                src="https://storage.googleapis.com/razinsyakib.appspot.com/img/skills/html.png" alt=""
+                                srcset="">
                         </div>
 
                         <!-- CSS -->
                         <div class="bg-white rounded-lg shadow-lg p-4 m-4 lg:w-1/7 md:w-1/6 xs:w-1/5"
-                            style="margin: 10px"><img style="height: auto" src="dist/img/skills/css.png" alt=""
+                            style="margin: 10px"><img style="height: auto"
+                                src="https://storage.googleapis.com/razinsyakib.appspot.com/img/skills/css.png" alt=""
                                 srcset=""></div>
 
                         <!-- JS -->
                         <div class="bg-white rounded-lg shadow-lg p-4 lg:w-1/7 md:w-1/6 xs:w-1/5" style="margin: 10px">
-                            <img style="height: auto" src="dist/img/skills/javascript.png" alt="" srcset=""></div>
+                            <img style="height: auto"
+                                src="https://storage.googleapis.com/razinsyakib.appspot.com/img/skills/javascript.png"
+                                alt="" srcset=""></div>
 
                         <!-- Tailwind -->
                         <div class="bg-white rounded-lg shadow-lg p-4 lg:w-1/7 md:w-1/6 xs:w-1/5" style="margin: 10px">
-                            <img style="height: auto" src="dist/img/skills/tailwind-css-icon.png" alt="" srcset="">
+                            <img style="height: auto"
+                                src="https://storage.googleapis.com/razinsyakib.appspot.com/img/skills/tailwind-css-icon.png"
+                                alt="" srcset="">
                         </div>
 
                         <!-- Bootstrap -->
                         <div class="bg-white rounded-lg shadow-lg p-4 lg:w-1/7 md:w-1/6 xs:w-1/5" style="margin: 10px">
-                            <img style="height: auto" src="dist/img/skills/bootstrap.png" alt="" srcset=""></div>
+                            <img style="height: auto"
+                                src="https://storage.googleapis.com/razinsyakib.appspot.com/img/skills/bootstrap.png"
+                                alt="" srcset=""></div>
                     </div>
                     <div class="flex flex-wrap my-4">
                         <!-- NodeJS -->
                         <div class="bg-white rounded-lg shadow-lg p-4 lg:w-1/7 md:w-1/6 xs:w-1/5" style="margin: 10px">
-                            <img style="height: auto" src="dist/img/skills/node-js.png" alt="" srcset=""></div>
+                            <img style="height: auto"
+                                src="https://storage.googleapis.com/razinsyakib.appspot.com/img/skills/node-js.png"
+                                alt="" srcset=""></div>
                         <!-- PHP -->
                         <div class="bg-white rounded-lg shadow-lg p-4 lg:w-1/7 md:w-1/6 xs:w-1/5" style="margin: 10px">
-                            <img style="height: auto" src="dist/img/skills/php.png" alt="" srcset=""></div>
+                            <img style="height: auto"
+                                src="https://storage.googleapis.com/razinsyakib.appspot.com/img/skills/php.png" alt=""
+                                srcset=""></div>
                         <!-- Google Cloud -->
                         <div class="bg-white rounded-lg shadow-lg p-4 lg:w-1/7 md:w-1/6 xs:w-1/5" style="margin: 10px">
-                            <img style="height: auto" src="dist/img/skills/google-cloud.png" alt="" srcset=""></div>
+                            <img style="height: auto"
+                                src="https://storage.googleapis.com/razinsyakib.appspot.com/img/skills/google-cloud.png"
+                                alt="" srcset=""></div>
                         <!-- Firebase -->
                         <div class="bg-white rounded-lg shadow-lg p-4 lg:w-1/7 md:w-1/6 xs:w-1/5" style="margin: 10px">
-                            <img style="height: auto" src="dist/img/skills/firebase.png" alt="" srcset=""></div>
+                            <img style="height: auto"
+                                src="https://storage.googleapis.com/razinsyakib.appspot.com/img/skills/firebase.png"
+                                alt="" srcset=""></div>
                         <!-- Figma -->
                         <div class="bg-white rounded-lg shadow-lg p-4 lg:w-1/7 md:w-1/6 xs:w-1/5" style="margin: 10px">
-                            <img style="height: auto" src="dist/img/skills/figma.png" alt="" srcset=""></div>
+                            <img style="height: auto"
+                                src="https://storage.googleapis.com/razinsyakib.appspot.com/img/skills/figma.png" alt=""
+                                srcset=""></div>
                     </div>
                 </div>
             </div>
@@ -278,8 +297,8 @@
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://kencanashop.netlify.app/" target="_blank"> <img
-                                        src="dist/img/Portfolio/Kencana Shop.png" alt="Kencana Shop"
-                                        style="width: 600px; border-radius: 0.375rem;"></a>
+                                        src="https://storage.googleapis.com/razinsyakib.appspot.com/img/Portfolio/Kencana%20Shop.png"
+                                        alt="Kencana Shop" style="width: 600px; border-radius: 0.375rem;"></a>
                             </div>
                             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
                                     href="https://kencanashop.netlify.app/" target="_blank">Kencana Shop
@@ -307,8 +326,8 @@
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://github.com/RazinSyakib43/Cukurin-Aja.git" target="_blank"> <img
-                                        src="dist/img/Portfolio/Cukurin Aja.png" alt="CukurinAja"
-                                        style="width: 600px; border-radius: 0.375rem;"></a>
+                                        src="https://storage.googleapis.com/razinsyakib.appspot.com/img/Portfolio/Cukurin%20Aja.png"
+                                        alt="CukurinAja" style="width: 600px; border-radius: 0.375rem;"></a>
                             </div>
                             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
                                     href="https://github.com/RazinSyakib43/Cukurin-Aja.git" target="_blank">CukurinAja
@@ -337,8 +356,8 @@
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://github.com/RazinSyakib43/New-ParentCare.git" target="_blank"> <img
-                                        src="dist/img/Portfolio/Parent Care.png" alt="Parent Care"
-                                        style="width: 600px; border-radius: 0.375rem;"></a>
+                                        src="https://storage.googleapis.com/razinsyakib.appspot.com/img/Portfolio/Parent%20Care.png"
+                                        alt="Parent Care" style="width: 600px; border-radius: 0.375rem;"></a>
                             </div>
                             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
                                     href="https://github.com/RazinSyakib43/New-ParentCare.git" target="_blank">Parent
@@ -369,8 +388,8 @@
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://github.com/RazinSyakib43/CariKuliner.git" target="_blank"> <img
-                                        src="dist/img/Portfolio/CariKuliner.png" alt="CariKuliner"
-                                        style="width: 600px; border-radius: 0.375rem;"></a>
+                                        src="https://storage.googleapis.com/razinsyakib.appspot.com/img/Portfolio/CariKuliner.png"
+                                        alt="CariKuliner" style="width: 600px; border-radius: 0.375rem;"></a>
                             </div>
                             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
                                     href="https://github.com/RazinSyakib43/CariKuliner.git" target="_blank">CariKuliner
@@ -402,8 +421,8 @@
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://github.com/RazinSyakib43/Bookshelf-Apps" target="_blank"> <img
-                                        src="dist/img/Portfolio/Bookshelf Apps.png" alt="Bookshelf-Apps"
-                                        style="width: 600px; border-radius: 0.375rem;"></a>
+                                        src="https://storage.googleapis.com/razinsyakib.appspot.com/img/Portfolio/Bookshelf%20Apps.png"
+                                        alt="Bookshelf-Apps" style="width: 600px; border-radius: 0.375rem;"></a>
                             </div>
                             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
                                     href="https://github.com/RazinSyakib43/Bookshelf-Apps"
@@ -434,7 +453,8 @@
                             <div class="rounded-md shadow overflow-hidden">
                                 <a
                                     href="https://github.com/RazinSyakib43/Restaurant-Catalogue-with-PWA-Testing-and-Web-Optimized.git">
-                                    <img src="dist/img/Portfolio/HungerApps.png" target="_blank" alt="HungerApps"
+                                    <img src="https://storage.googleapis.com/razinsyakib.appspot.com/img/Portfolio/HungerApps.png"
+                                        target="_blank" alt="HungerApps"
                                         style="width: 600px; border-radius: 0.375rem;"></a>
                             </div>
                             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
