--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <p class="font-medium text-slate-400 mb-10 leading-relaxed lg:text-2xl">I am a sixth-semester
                         Informatics student who is passionate about Web Programming and interested in Cloud Computing.
                     </p>
-                    <a href="https://drive.google.com/file/d/1bh_xz9jxQH7A_Ej5DddrI5IZTul053LM/view?usp=sharing"
+                    <a href="https://drive.google.com/file/d/1rXWxbUL1e3eXq-A3V8Wsoa0crlUJ2tCs/view?usp=sharing" target="_blank"
                         class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out">Download
                         CV</a>
                 </div>
