--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <p class="font-medium text-slate-400 mb-10 leading-relaxed lg:text-2xl">I am a sixth-semester
                         Informatics student who is passionate about Web Programming and interested in Cloud Computing.
                     </p>
-                    <a href="https://drive.google.com/file/d/1rXWxbUL1e3eXq-A3V8Wsoa0crlUJ2tCs/view?usp=sharing" target="_blank"
+                    <a href="https://drive.google.com/file/d/1TeVp0UGiJP3J5yUYvoc4CelyfHh5SHpm/view?usp=sharing" target="_blank"
                         class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out">Download
                         CV</a>
                 </div>
@@ -99,12 +99,8 @@
                 <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h2 class="font-bold text-primary text-3xl mb-5 max-w-md lg:text-4xl">About Me</h2>
                     <p class="font-medium text-white text-secondary text-justify max-w-xl lg:text-lg">Hi, my name is
-                        Muhammad Razin Syakib and I
-                        am currently a 6th-semester student at STMIK Sinar Nusantara. I am also a participant of the
-                        Bangkit Academy program, organized by Google, Goto, and Traveloka, with a focus on Cloud
-                        Computing. Prior to this, I also participated in other training programs such as Digitalent
-                        Kominfo and Dicoding Indonesia. My main focus is in Website Development and I am currently
-                        deepening my knowledge in Cloud Computing. During my free time, I love to read and explore new
+                        Muhammad Razin Syakib . I'm a sixth-semester Informatics student at STMIK Sinar Nusantara with a passion for software and website development, as well as cloud computing technology. Experienced in building and managing web, RESTful API, and backend systems, and deploying applications using Google Cloud Platform. Proficient in programming languages such as JavaScript, PHP, MySQL, and Firebase. I have developed my skills in teamwork and communication with others. I am dedicated to continuous learning and exploration, always seeking opportunities to expand my knowledge and improve my skills in the tech industry.
+                        During my free time, I love to read and explore new
                         technologies, try out new things in tech to build fun side projects, watch animes or movies, and
                         listen to music.</p>
                     <div class="flex items-center mt-4">
@@ -156,7 +152,7 @@
                         <div class="flex">
                             <h4 class="font-semibold text-lg text-primary mr-2">2023</h4>
                             <p class="font-bold text-white text-secondary text-justify max-w-xl lg:text-lg">
-                                Cloud Computing Cohort</p>
+                                Cloud Computing Graduate</p>
                         </div>
                         <p class="font-medium text-slate-400 text-secondary text-justify max-w-xl lg:text-md">
                             Bangkit Academy led by Google, Tokopedia, Gojek, & Traveloka
@@ -303,7 +299,7 @@
                             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a
                                     href="https://kencanashop.netlify.app/" target="_blank">Kencana Shop
                                 </a></h3>
-                            <p class="font-medium text-dark text-justify">Kencana Shop is an online store
+                            <p class="font-medium text-base text-secondary text-justify">Kencana Shop is an online store
                                 for Muslimah
                                 fashion products. The website offers a wide range of affordable and stylish items,
                                 including hijabs, dresses, and more. Browse and purchase with ease on the
