filter category buttons design

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                     <p class="font-medium text-slate-400 mb-10 leading-relaxed lg:text-2xl">I am a sixth-semester
                         Informatics student who is passionate about Web Programming and interested in Cloud Computing.
                     </p>
-                    <a href="https://drive.google.com/file/d/1AQT0tsOi9WBBSjRP2Lc5Qmy_jhOaUxfx/view?usp=sharing" target="_blank"
+                    <a href="https://drive.google.com/file/d/1AQT0tsOi9WBBSjRP2Lc5Qmy_jhOaUxfx/view?usp=sharing"
+                        target="_blank"
                         class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out">Download
                         CV</a>
                 </div>
@@ -99,7 +100,13 @@
                 <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h2 class="font-bold text-primary text-3xl mb-5 max-w-md lg:text-4xl">About Me</h2>
                     <p class="font-medium text-white text-secondary text-justify max-w-xl lg:text-lg">Hi, my name is
-                        Muhammad Razin Syakib. I'm a sixth-semester Informatics student at STMIK Sinar Nusantara with a passion for software and website development, as well as cloud computing technology. Experienced in building and managing web, RESTful API, and backend systems, and deploying applications using Google Cloud Platform. Proficient in programming languages such as JavaScript, PHP, MySQL, and Firebase. I have developed my skills in teamwork and communication with others. I am dedicated to continuous learning and exploration, always seeking opportunities to expand my knowledge and improve my skills in the tech industry.
+                        Muhammad Razin Syakib. I'm a sixth-semester Informatics student at STMIK Sinar Nusantara with a
+                        passion for software and website development, as well as cloud computing technology. Experienced
+                        in building and managing web, RESTful API, and backend systems, and deploying applications using
+                        Google Cloud Platform. Proficient in programming languages such as JavaScript, PHP, MySQL, and
+                        Firebase. I have developed my skills in teamwork and communication with others. I am dedicated
+                        to continuous learning and exploration, always seeking opportunities to expand my knowledge and
+                        improve my skills in the tech industry.
                         During my free time, I love to read and explore new
                         technologies, try out new things in tech to build fun side projects, watch animes or movies, and
                         listen to music.</p>
@@ -288,8 +295,20 @@
                 </div>
             </div>
             <div class="flex flex-wrap">
-                <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
-                    <div class="mb-12 p-4 md:w-1/2">
+                <div class="category w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
+                    <nav>
+                        <div class="items">
+                            <span class="item active" data-name="all">All</span>
+                            <span class="item" data-name="web-dev">Web Development</span>
+                            <span class="item" data-name="back-end">Back-End Development</span>
+                            <span class="item" data-name="ui-ux">UI/UX Design</span>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+            <div class="flex flex-wrap">
+                <div class="gallery w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
+                    <div class="image mb-12 p-4 md:w-1/2">
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://kencanashop.netlify.app/" target="_blank"> <img
@@ -318,7 +337,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="mb-12 p-4 md:w-1/2">
+                    <div class="image mb-12 p-4 md:w-1/2">
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://github.com/RazinSyakib43/Cukurin-Aja.git" target="_blank"> <img
@@ -348,7 +367,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="mb-12 p-4 md:w-1/2">
+                    <div class="image mb-12 p-4 md:w-1/2">
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://github.com/RazinSyakib43/New-ParentCare.git" target="_blank"> <img
@@ -380,7 +399,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="mb-12 p-4 md:w-1/2">
+                    <div class="image mb-12 p-4 md:w-1/2">
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://github.com/RazinSyakib43/CariKuliner.git" target="_blank"> <img
@@ -413,7 +432,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="mb-12 p-4 md:w-1/2">
+                    <div class="image mb-12 p-4 md:w-1/2">
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a href="https://github.com/RazinSyakib43/Bookshelf-Apps" target="_blank"> <img
@@ -444,7 +463,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="mb-12 p-4 md:w-1/2">
+                    <div class="image mb-12 p-4 md:w-1/2">
                         <div class="bg-slate-100 rounded-xl p-6">
                             <div class="rounded-md shadow overflow-hidden">
                                 <a
